# computational_methods_course_mfarmani95

./: README.md  intro.md  postbuild.sh  pyproject.toml
Hw/HW1/: My  assignment_01.ipynb
Hw/HW2/: assignment_02.ipynb
Hw/Project/: project_proposal.md  project_proposal_feedback.md
assignments/: .Rhistory  assignment_01.html  assignment_01.ipynb  assignment_01.md  assignment_02.md  assignment_03.md  assignment_04.md  project_proposal.md  sceua_bucket.csv
data/: LeafRiverDaily.csv  README.md  index.md
extras/: index.md
notebooks/: README.md  index.md
notebooks/convnets/: 0_CNN_basics.ipynb  1_gfs_conus_autoregressive_forecasting.ipynb
notebooks/deep_learning/: 0_foundations_of_deep_learning.ipynb  1_leaf_river_example.ipynb  2_practical_considerations.ipynb  2_variational_autoencoders.ipynb
notebooks/diffusion_models/: 0_diffusion_model_basics.ipynb  1_score_based_diffusion_and_neural_odes.ipynb  2_corrdiff_toy_gfs_downscaling.ipynb
notebooks/hybrid_modeling/: 0_neural_odes.ipynb  1_neural_ode_adjoint.ipynb  1_simple_hybrid_model.ipynb  2_simple_hybrid_model.ipynb  3_richards_equation_pinn_hybrid.ipynb
notebooks/matrix_decompositions/: 0_svd_theory.ipynb  1_svd_eof_pca_in_earth_science.ipynb  4_dmd_for_segmentation.ipynb  5_sindy_nonlinear_dynamics.ipynb
notebooks/operator_learning/: 0_operator_learning_for_pdes.ipynb  1_fourier_neural_operators.ipynb  2_spherical_neural_operators_global_forecasting.ipynb  3_graph_neural_weather_operators.ipynb  4_aifs_and_modern_ai_forecasting.ipynb
resources/: index.md
slides/: index.md
(+25 files in other folders)
