[project]
name = "computational-methods-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "anemoi-inference>=0.10.1",
    "bokeh>=3.8.2",
    "boto3>=1.42.16",
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "dask>=2026.1.1",
    "datasets>=4.8.2",
    "distributed>=2026.1.1",
    "earth2studio[dlwp]>=0.9.0",
    "eccodes>=2.46.0",
    "eofs>=2.0.0",
    "flake8>=7.3.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "geopandas>=1.1.2",
    "h5py>=3.15.1",
    "huggingface-hub>=1.7.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "minicamels",
    "netcdf4>=1.7.3",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pooch>=1.8.2",
    "pydmd>=2025.8.1",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spotpy>=1.6.6",
    "statsmodels>=0.14.6",
    "tensorboard>=2.20.0",
    "torch[cpu]>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]

[tool.uv.sources]
minicamels = { git = "https://github.com/BennettHydroLab/minicamels.git" }
